# NOVA8-Kanban-Board

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: tasks.py
backend/app/core/: config.py  exceptions.py
backend/app/db/: session.py
backend/app/models/: task.py
backend/app/schemas/: task.py
backend/app/services/: tasks.py
backend/tests/: conftest.py  test_tasks.py
frontend/: .dockerignore  .eslintrc.cjs  Dockerfile  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  types.ts
frontend/src/api/: client.ts  tasks.ts
frontend/src/components/: Board.tsx  Column.tsx  ErrorBoundary.tsx  NewTaskForm.tsx  TaskCard.tsx
frontend/src/hooks/: useTasks.ts
frontend/src/lib/: formatDate.ts
